добавил русскоязычную локализацию

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="search-box">
             <i class="fa-solid fa-location-dot"></i>
-            <input type="text" id="input" placeholder="Enter your location" autofocus>
+            <input type="text" id="input" placeholder="Поиск города" autofocus>
             <button class="fa-solid fa-magnifying-glass" id="btn-search"></button>
         </div>
 
@@ -37,14 +37,14 @@
                 <i class="fa-solid fa-water"></i>
                 <div class="text">
                     <span></span>
-                    <p>Humidity</p>
+                    <p>Влажность</p>
                 </div>
             </div>
             <div class="wind">
                 <i class="fa-solid fa-wind"></i>
                 <div class="text">
                     <span></span>
-                    <p>Wind Speed</p>
+                    <p>Ветер</p>
                 </div>
             </div>
         </div>
